<resources>
    <string name="app_name">SkyPass</string>
    <string name="home">Beranda</string>
    <string name="history">Riwayat</string>
    <string name="notification">Notifikasi</string>
    <string name="account">Akun</string>
    <string name="get_started">Get Started</string>
    <string name="next">Next</string>
    <string name="email_registered_exception">java.lang.Exception: Email sudah terdaftar</string>
    <string name="password_less_than_8_char_exception">java.lang.Exception: Password minimal 8 karakter</string>
    <string name="email_not_found_exception">java.lang.Exception: Alamat Email tidak ditemukan</string>
    <string name="password_is_wrong_exception">java.lang.Exception: Password yang dimasukkan salah</string>
    <string name="email_registered">Alamat email sudah terdaftar!</string>
    <string name="email_not_found">Alamat email tidak ditemukan!</string>
    <string name="password_not_found">Password yang dimasukkan salah!</string>
    <string name="login_success">Login sukses!</string>
    <string name="hint_fullname">Nama Lengkap</string>
    <string name="hint_email">Email</string>
    <string name="hint_phone_number">+62</string>
    <string name="hint_password">Buat Password</string>
    <string name="text_register">Daftar</string>
    <string name="text_already_registered">Sudah punya akun?</string>
    <string name="text_login_here">Masuk di sini</string>
    <string name="text_nama">Nama</string>
    <string name="text_email">Email</string>
    <string name="text_phone_number">Nomor Telepon</string>
    <string name="text_password">Buat Password</string>
    <string name="text_error_name_cannot_empty">Nama tidak boleh kosong !</string>
    <string name="text_error_telepon_cannot_empty">Masukkan nomor telepon anda !</string>
    <string name="text_error_email_empty">Email tidak boleh kosong !</string>
    <string name="text_error_email_invalid">Masukkan format email yang benar !</string>
    <string name="text_error_password_empty">Password tidak boleh kosong !</string>
    <string name="text_error_password_less_than_8_char">Password min 8 karakter !</string>
    <string name="text_otp_send_success">Kode OTP telah dikirim !</string>
    <string name="text_otp_send_failed">Kode OTP gagal dikirim !</string>
    <string name="text_input_otp">Masukkan OTP</string>
    <string name="text_input_6_code_otp">"Ketik 6 digit kode yang akan dikirimkan\nke %1$s"</string>
    <string name="text_resend_otp">Kirim Ulang</string>
    <string name="text_resend_otp_in_60_seconds">Kirim Ulang OTP dalam %1$d detik</string>
    <string name="tv_verify">Verifikasi</string>
    <string name="text_register_success">Registrasi berhasil, silahkan login</string>
    <string name="text_otp_wrong">Maaf, Kode OTP Salah!</string>
    <string name="text_email_not_found">User tidak ditemukan, mohon register terlebih dahulu</string>
    <string name="text_resend_otp_success">Kirim Ulang Berhasil, tolong cek email anda</string>
    <string name="tv_account">Account</string>
    <string name="text_edit_profile">Ubah Profile</string>
    <string name="text_settings_account">Pengaturan</string>
    <string name="text_logout">Keluar</string>
    <string name="text_version">Version 1.1.0</string>
    <string name="text_ubah_profile">Ubah Profile</string>
    <string name="hint_nama_lengkap">Nama Lengkap</string>
    <string name="text_tanggal_lahir">Tanggal Lahir</string>
    <string name="hint_tanggal_lahir_anda">Tanggal Lahir Anda</string>
    <string name="text_nomor_induk_kependudukan">Nomor Induk Kependudukan</string>
    <string name="hint_nomor_induk_kependudukan">NIK</string>
    <string name="hint_email_user">Contoh: johndoe@gmail.com</string>
    <string name="text_nomor_telepon">Nomor Telepon</string>
    <string name="hint_number_phone">+62</string>
    <string name="btn_simpan">Simpan</string>
    <string name="text_pengaturan_akun">Pengaturan Akun</string>
    <string name="text_tema">Ganti tema</string>
    <string name="text_hapus_akun">Hapus Akun</string>
    <string name="text_rincian_penerbangan">Rincian Penerbangan</string>
    <string name="text_unpaid">Unpaid</string>
    <string name="text_booking_code">Booking Code :</string>
    <string name="text_code">1234567</string>
    <string name="text_time_detail">07.00</string>
    <string name="text_status">Keberangkatan</string>
    <string name="text_detail_date">6 Juni 2023</string>
    <string name="text_detail_airport">Adi Soemarmo Airport</string>
    <string name="text_maskapai_name">Jet Air - Economy</string>
    <string name="text_code_airlines">JA - 117</string>
    <string name="text_informasi">Informasi :</string>
    <string name="text_penumpang">Penumpang :</string>
    <string name="pemesan">Pemesan</string>
    <string name="text_id">ID :</string>
    <string name="text_id_passanger">1234567</string>
    <string name="text_detail_time_arrived">07.45 WIB</string>
    <string name="text_kedatangan">Kedatangan</string>
    <string name="text_detail_date_arrived">6 Juni 2023</string>
    <string name="text_airport_arrived">Soekarno Hatta Airport</string>
    <string name="text_rincian_harga">Rincian Harga</string>
    <string name="text_adult">1 Adults</string>
    <string name="text_harga_adult">IDR 9.550.000</string>
    <string name="text_baby">1 Baby</string>
    <string name="text_harga_baby">IDR 0</string>
    <string name="text_tax">Tax</string>
    <string name="text_total">Total</string>
    <string name="text_total_harga">IDR 1.200.000/pax</string>
    <string name="text_button">Lanjut Pembayaran</string>
    <string name="text_harga_tax">IDR 0</string>
    <string name="text_class">Tanggal: </string>
    <string name="text_business">Business</string>
    <string name="text_jkt">JKT</string>
    <string name="text_jakarta">Jakarta</string>
    <string name="text_mlb">MLB</string>
    <string name="text_malang">Malang</string>
    <string name="text_jam">1:35 Jam</string>
    <string name="text_jam_berangkat">08:00 AM</string>
    <string name="text_24_mei_2024">24 Mei 2024</string>
    <string name="text_jam_sampai">09:35 AM</string>
    <string name="text_sampai">24 Mei 2024</string>
    <string name="text_booking_code_user">Booking Code :</string>
    <string name="text_code_booking_user">6756232OG</string>
    <string name="text_harga_tiket">Rp. 1.240.000</string>
    <string name="text_bulan_tahun">Maret 2023</string>
    <string name="text_riwayat_pemesanan">Riwayat Pemesanan</string>
    <string name="text_filter">Filter</string>
    <string name="text_oops_riwayat_pesanan_kosong">Oops! Riwayat Pesanan Kosong!</string>
    <string name="text_anda_belum_melakukan_pemesanan">Anda Belum Melakukan Pemesanan</string>
    <string name="text_maaf_tiket_terjual_habis">Maaf, Tiket Terjual Habis!</string>
    <string name="text_coba_cari_perjalanan_lainnya">Coba Cari Perjalanan Lainnya!</string>
    <string name="text_ubah_pencarian">Ubah Pencarian</string>
    <string name="text_maaf_anda_harus_login_terlebih_dahulu">Maaf, Anda Harus Login Terlebih Dahulu!</string>
    <string name="text_masuk">Masuk</string>
    <string name="title_form_checkout_data_orders">Data Diri Pemesanan</string>
    <string name="text_form_checkout_name">Nama Lengkap</string>
    <string name="text_switch_form_checkout">Punya Nama Keluarga</string>
    <string name="text_label_phone_form_checkout">Nomor Telepon</string>
    <string name="text_hint_checkout_phone">Nomor Telepon</string>
    <string name="text_label_checkout_email">Email</string>
    <string name="text_hint_email">ex: JohnDown@gmail.com</string>
    <string name="text_button_checkout">Simpan</string>
    <string name="text_toolbar_checkout_passenger">Biodata Penumpang</string>
    <string name="text_data_passenger_label_date_country">Berlaku Sampai</string>
    <string name="hint_dd_mm_yyyy">Tanggal Lahir (dd-mm-yyyy)</string>
    <string name="hint_country_ktp">Negara Penerbit</string>
    <string name="hint_ktpOrpassport">KTP/Paspor</string>
    <string name="hint_Citizenship">Kewarganegaraan</string>
    <string name="table_DateBorn">Tanggal Lahir</string>
    <string name="hint_noPhone">Nomor Telepon +62</string>
    <string name="label_nomor_telphone">Nomor Telphone</string>
    <string name="hint_family_name">Nama Keluarga</string>
    <string name="label_switch_data_passenger_checkout">Punya Nama Keluarga</string>
    <string name="hint_full_name">Nama Lengkap</string>
    <string name="title_form_data_passenger">Data Diri Pemesanan</string>
    <string name="text_toolbar_detail_checkout">Rincian Penerbangan</string>
    <string name="text_detail_checkout_price_title">Rincian Harga</string>
    <string name="text_button_detail_checkout">Lanjut Pembayaran</string>
    <string name="detail_checkout_information">Informasi :</string>
    <string name="text_family_name">Nama Keluarga</string>
    <string name="button_checkout_passenger">Lanjut Pilih Kursi</string>
    <string name="text_toolbar_checkout_seat">Pilih Kursi</string>
    <string name="title_item_notification">Ini judul Promosi</string>
    <string name="text_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="text_title_fragment_notification">Notifikasi</string>
    <string name="text_empty_messege_state">Data Masih Kosong</string>
    <string name="skypass">SkyPass</string>
    <string name="one_way">One way</string>
    <string name="round_trip">Round trip</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="input_departure">Awal keberangkatan</string>
    <string name="input_destination">Tujuan keberangkatan</string>
    <string name="departure">Departure</string>
    <string name="input_date_departure">Atur Tanggal</string>
    <string name="return_title">Return</string>
    <string name="passengers">Passengers</string>
    <string name="input_qyt_passengers">Pilih Penumpang</string>
    <string name="seat_class">Seat Class</string>
    <string name="input_flight_class">Pilih Kelas</string>
    <string name="search_flight">Cari Penerbangan</string>
    <string name="last_search_title">Pencarian Terakhir</string>
    <string name="history_search_empty">Tidak ada riwayat pencarian</string>
    <string name="favorite_destination">Destinasi Favorit</string>
    <string name="no_favorite_destination">Tidak ada saran destinasi favorit</string>
    <string name="input_return">Atur Tanggal</string>
    <string name="save_passengers">Simpan</string>
    <string name="decrease">-</string>
    <string name="empty">0</string>
    <string name="increase">+</string>
    <string name="baby_age">(Dibawah 2 tahun)</string>
    <string name="baby">Bayi</string>
    <string name="children_age">(2 - 11 tahun)</string>
    <string name="children">Anak</string>
    <string name="adult_age">(12 tahun ke atas)</string>
    <string name="adult">Dewasa</string>
    <string name="search_title">Pilih Kota Tujuan</string>
    <string name="search_hint">Pilih kota tujuan</string>
    <string name="history_search_title">Pencarian</string>
    <string name="delete">Hapus</string>
    <string name="no_history_search">Tidak ada histori pencarian</string>
    <string name="city_last_search">Jakarta</string>
    <string name="time">07:00</string>
    <string name="date">3 Maret 2024</string>
    <string name="terminal">Soekarno Hatta - Terminal 1A Domestik</string>
    <string name="incoming">Keberangkatan</string>
    <string name="airline">Jet Air</string>
    <string name="until_flight_detail">-</string>
    <string name="class_flight_detail">Economy</string>
    <string name="code_plane">JT - 203</string>
    <string name="information">Informasi:</string>
    <string name="description_flight">Baggage 20 kg\nCabin baggage 7 kg\nIn Flight Entertainment</string>
    <string name="arrival">Kedatangan</string>
</resources>