<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center|top"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="8dp">

    <com.vipulasri.ticketview.TicketView
        android:layout_width="match_parent"
        android:layout_height="230dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:ticketBorderColor="#D0D0D0"
        app:ticketBorderWidth="2dp"
        app:ticketCornerRadius="16dp"
        app:ticketCornerType="rounded"
        app:ticketDividerColor="#D0D0D0"
        app:ticketDividerType="dash"
        app:ticketElevation="8dp"
        app:ticketOrientation="horizontal"
        app:ticketScallopPositionPercent="70"
        app:ticketScallopRadius="10dp"
        app:ticketShowBorder="true"
        app:ticketShowDivider="true" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="16dp"
        android:paddingTop="12dp"
        android:paddingBottom="16dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/tv_status"
            android:layout_width="100dp"
            android:layout_height="30dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" >

            <TextView
                android:id="@+id/tv_status_data"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:gravity="center"
                android:textSize="16sp"
                android:text="@string/text_unpaid"
                android:textColor="@color/white"
                />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_order_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_class"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginEnd="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_order_date_data"/>

        <TextView
            android:id="@+id/tv_order_date_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_business"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_city_departure_alias"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/text_jkt"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_status"/>



        <TextView
            android:id="@+id/tv_city_name_destination_alias"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/text_mlb"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_city_departure_alias" />



        <TextView
            android:id="@+id/tv_length_of_journey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_jam"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_order_date_data" />

        <TextView
            android:id="@+id/tv_time_departure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/text_jam_berangkat"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tv_city_departure_alias"
            app:layout_constraintTop_toBottomOf="@id/tv_city_departure_alias"/>

        <TextView
            android:id="@+id/tv_date_departure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_24_mei_2024"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/tv_city_departure_alias"
            app:layout_constraintTop_toBottomOf="@id/tv_time_departure"/>

        <TextView
            android:id="@+id/tv_time_arrival"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/text_jam_sampai"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_city_departure_alias"/>

        <TextView
            android:id="@+id/tv_date_arrival"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_sampai"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_time_arrival"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_date_departure">

            <TextView
                android:id="@+id/tv_booking_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/text_booking_code_user"
                android:textStyle="bold"
                android:textSize="14sp"
                android:drawablePadding="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:id="@+id/tv_id_backing_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginStart="8dp"
                android:text="@string/text_code_booking_user"
                android:textSize="16sp"
                android:drawablePadding="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_booking_code"/>

            <TextView
                android:id="@+id/tv_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:text="@string/text_harga_tiket"
                android:textSize="16sp"
                android:textColor="?attr/colorPrimary"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/tv_booking_code"
                app:layout_constraintTop_toTopOf="parent"

                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>