<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/id_clear"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:src="@drawable/ic_clear"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <ImageView
        android:id="@+id/iv_tiket_habis"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:src="@drawable/image_pesawat_history_order"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="150dp"
        app:layout_constraintBottom_toTopOf="@id/tv_tiket_habis"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_tiket_habis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_maaf_tiket_terjual_habis"
        android:textColor="@color/purple"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="42dp"
        app:layout_constraintTop_toBottomOf="@id/iv_tiket_habis"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_tiket_habis_2"/>

    <TextView
        android:id="@+id/tv_tiket_habis_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_coba_cari_perjalanan_lainnya"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_tiket_habis"
        app:layout_constraintBottom_toTopOf="@id/btnSubmit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="42dp"
        android:background="@drawable/bg_button"
        android:text="@string/text_ubah_pencarian"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_tiket_habis_2"/>
</androidx.constraintlayout.widget.ConstraintLayout>